almost done with reworking of login dialog
